--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,3 +1,8 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation platform('software.amazon.awssdk:bom:2.20.43') // AWS SDK BOM
+    implementation 'software.amazon.awssdk:s3'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation project(':common:snowflake')
 }
