--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -1,1 +1,27 @@
-server.port=8080
+server.port: 8080
+spring:
+  application:
+    name: board-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/board
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+    show-sql: false
+    hibernate:
+      ddl-auto: none
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${ACCESS_KEY}
+      secret-key: ${SECRET_KEY}
+    region:
+      static: ap-northeast-2
+    s3:
+      bucket: software-board-bucket
+    stack:
+      auto: false
