--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
 cloud:
   aws:
     credentials:
-      access-key: ${ACCESS_KEY}
-      secret-key: ${SECRET_KEY}
+      access-key: AKIA3LUYWHNQK2UV4CV3 # ${ACCESS_KEY}
+      secret-key: AKIA3LUYWHNQK2UV4CV3 # ${SECRET_KEY}
     region:
       static: ap-northeast-2
     s3:
