--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: none
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 cloud:
   aws:
