--- a/service/build.gradle
+++ b/service/build.gradle
@@ -2,8 +2,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.kafka:spring-kafka'
     implementation platform('software.amazon.awssdk:bom:2.20.43')
     implementation 'software.amazon.awssdk:s3'
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation project(':common:snowflake')
+    implementation project(':common:event')
 }
