--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
     redis:
       host: localhost
       port: 6379
+      repositories:
+        enabled: false
+
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
