--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'common'
 include 'common:snowflake'
 include 'common:data-serializer'
 include 'common:event'
+include 'common:outbox-message-relay'
 include 'service'
