--- a/service/build.gradle
+++ b/service/build.gradle
@@ -8,4 +8,5 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation project(':common:snowflake')
     implementation project(':common:event')
+    implementation project(':common:outbox-message-relay')
 }
