--- a/service/build.gradle
+++ b/service/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     implementation project(':common:snowflake')
     implementation project(':common:event')
     implementation project(':common:outbox-message-relay')
+    implementation project(':common:data-serializer')
 }
