--- a/service/build.gradle
+++ b/service/build.gradle
@@ -3,9 +3,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation platform('software.amazon.awssdk:bom:2.20.43')
     implementation 'software.amazon.awssdk:s3'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    
     implementation project(':common:snowflake')
     implementation project(':common:event')
     implementation project(':common:outbox-message-relay')
